// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationView renders RTL styling 1`] = `
.c0 *,
.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c0:focus {
  outline: none;
}

<ul
  className="c-pagination is-rtl c0"
  data-garden-id="pagination.pagination_view"
  data-garden-version="version"
/>
`;

exports[`PaginationView renders default styling 1`] = `
.c0 *,
.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c0:focus {
  outline: none;
}

<ul
  className="c-pagination c0"
  data-garden-id="pagination.pagination_view"
  data-garden-version="version"
/>
`;
